syntax = "proto3";

package kyve.delegation.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/delegation/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // unbonding_delegation_time ...
  uint64 unbonding_delegation_time = 1;
  // unbonding_delegation_time ...
  uint64 redelegation_cooldown = 2;
  // unbonding_delegation_time ...
  uint64 redelegation_max_amount = 3;
}
